--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,12 @@
-/* styles go here */
+
+.label {
+  display: block;
+}
+
+.fieldset:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.label:not(:last-child) {
+  margin-bottom: 10px;
+}
